--- a/config/docker/Dockerfile
+++ b/config/docker/Dockerfile
@@ -19,4 +19,6 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 EXPOSE 9000
 
+RUN composer install
+
 CMD /bin/bash -c "php-fpm"
